--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -1,15 +1,17 @@
 {
   "type": "module",
   "scripts": {
-    "dev":"node --watch index.js"
+    "dev": "node --watch index.js"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "db-local": "^3.1.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "standard": "^17.1.2"
   },
   "eslintConfig": {
-    "extends":"standard"
+    "extends": "standard"
   }
 }
