--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,18 +1,14 @@
-name: Auto Release on Merge to Main
+name: Auto Release on Push to Main
 
 on:
   push:
     branches:
-      - main  
+      - main
 
 jobs:
   create_release:
     name: Create Release
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]  
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
@@ -23,19 +19,12 @@ jobs:
         with:
           node-version: 20
 
-      # Instalar jq para leer versión
-      - name: Install jq (Linux)
-        if: runner.os == 'Linux'
-        run: sudo apt-get install -y jq
-
-      - name: Install jq (Windows)
-        if: runner.os == 'Windows'
-        run: choco install jq -y
+      - name: Install jq
+        run: sudo apt-get update && sudo apt-get install -y jq
 
       - name: Get version from package.json
         id: get_version
-        run: |
-          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
@@ -43,6 +32,6 @@ jobs:
           tag_name: v${{ env.VERSION }}
           name: Release v${{ env.VERSION }}
           body: |
-            Nueva versión automática generada tras merge o push a main.
+            Nueva versión automática generada tras push a main.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
