--- a/.github/workflows/releaseFront.yml
+++ b/.github/workflows/releaseFront.yml
@@ -8,10 +8,7 @@ on:
 jobs:
   release_frontend:
     name: Create Frontend Release
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest]
+    runs-on: ubuntu-latest  # ✅ solo un SO, más estable
 
     steps:
       - name: Checkout repository
@@ -22,21 +19,55 @@ jobs:
         with:
           node-version: 20
 
-      # Obtener versión directamente con Node.js (sin jq)
+      # 🔹 Validar existencia del package.json
+      - name: Verify package.json exists
+        run: |
+          if [ ! -f pyschool-frontend/package.json ]; then
+            echo "No se encontró pyschool-frontend/package.json"
+            exit 1
+          fi
+
+      # 🔹 Obtener versión con Node.js
       - name: Get version from pyschool-frontend/package.json
         id: get_front_version
         shell: bash
         run: |
           VERSION=$(node -p "require('./pyschool-frontend/package.json').version")
-          echo "FRONT_VERSION=$VERSION" >> $GITHUB_ENV
+          if [ -z \"$VERSION\" ]; then
+            echo \"No se pudo obtener versión desde package.json\"
+            exit 1
+          fi
+          echo \"FRONT_VERSION=$VERSION\" >> $GITHUB_ENV
+          echo \"Versión detectada: $VERSION\"
 
-      # Crear release del frontend
+      # 🔹 Instalar CLI de GitHub con reintentos
+      - name: Install GitHub CLI
+        run: |
+          for i in 1 2 3; do
+            sudo apt-get update -y && sudo apt-get install -y gh && break || sleep 10
+          done
+
+      # 🔹 Verificar si ya existe el release
+      - name: Check if release already exists
+        id: check_release
+        run: |
+          EXISTING=$(gh release view frontend-v${{ env.FRONT_VERSION }} --json tagName -q .tagName || echo "")
+          if [ -n "$EXISTING" ]; then
+            echo "Release ya existe: frontend-v${{ env.FRONT_VERSION }}"
+            echo "SKIP_RELEASE=true" >> $GITHUB_ENV
+          else
+            echo "SKIP_RELEASE=false" >> $GITHUB_ENV
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      # 🔹 Crear el release si no existe
       - name: Create Frontend Release
+        if: env.SKIP_RELEASE == 'false'
         uses: softprops/action-gh-release@v1
         with:
           tag_name: frontend-v${{ env.FRONT_VERSION }}
           name: Frontend Release v${{ env.FRONT_VERSION }}
           body: |
-            🚀 Nueva versión del FRONTEND generada automáticamente.
+            Nueva versión del FRONTEND generada automáticamente.
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
