--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -7,6 +7,10 @@ on:
   schedule:
     - cron: '55 3 * * 1'  # semanal, c/domingo a las 23.55
 
+permissions:
+    contents: write
+    pull-requests: write
+
 jobs:
   release-please:
     runs-on: ubuntu-latest
