--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -1,15 +1,20 @@
 {
   "type": "module",
   "scripts": {
-    "dev":"node --watch index.js"
+    "dev": "node --watch index.js"
   },
   "dependencies": {
     "express": "^5.1.0"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^11.0.6",
+    "conventional-changelog-conventionalcommits": "^9.1.0",
+    "semantic-release": "^24.2.9",
     "standard": "^17.1.2"
   },
   "eslintConfig": {
-    "extends":"standard"
+    "extends": "standard"
   }
 }
