--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -4,13 +4,18 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "joi": "^18.0.1",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^11.0.6",
     "conventional-changelog-conventionalcommits": "^9.1.0",
+    "nodemon": "^3.1.10",
     "semantic-release": "^24.2.9",
     "standard": "^17.1.2"
   },
