--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -4,7 +4,8 @@
     "dev": "node --watch index.js"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "react-icons": "^5.5.0"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
