--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -1,17 +1,25 @@
 {
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@prisma/client": "^6.17.1",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "joi": "^18.0.1",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "prisma": "^6.17.1"
   },
   "devDependencies": {
     "@semantic-release/changelog": "^6.0.3",
@@ -24,5 +32,12 @@
   },
   "eslintConfig": {
     "extends": "standard"
-  }
+  },
+  "name": "pyson-backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": "Backend for Pyson by Tamarindo"
 }
