--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,9 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
+          cache-dependecy-path: |
+            pyschool-frontend/package-lock.json
+            pyschool-backend/package-lock.json
 
       - name: Install frontend deps
         run: cd pyschool-frontend && npm ci
