--- a/pyschool-backend/package.json
+++ b/pyschool-backend/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "scripts": {
+    "seed": "node prisma/seed.js",
     "start": "node server.js",
     "dev": "nodemon server.js",
     "prisma:generate": "prisma generate",
