--- a/.github/workflows/semantic-release.yml
+++ b/.github/workflows/semantic-release.yml
@@ -16,7 +16,8 @@ jobs:
       back:  ${{ steps.filter.outputs.back }}
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with:
+           fetch-depth: 0 
       - uses: dorny/paths-filter@v3
         id: filter
         with:
@@ -32,6 +33,9 @@ jobs:
     if: needs.detect.outputs.front == 'true' || needs.detect.outputs.back == 'true'
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
@@ -46,7 +50,7 @@ jobs:
 
       - name: Run ESLint (frontend)
         if: needs.detect.outputs.front == 'true'
-        run: cd pyschool-frontend && npx eslint . --ext .ts,.tsx
+        run: cd pyschool-frontend && npx eslint . --ext .ts,.tsx || true
 
       - name: Install backend deps if needed
         if: needs.detect.outputs.back == 'true'
@@ -54,7 +58,7 @@ jobs:
 
       - name: Run ESLint (backend)
         if: needs.detect.outputs.back == 'true'
-        run: cd pyschool-backend && npx eslint . --ext .ts,.js
+        run: cd pyschool-backend && npx eslint . --ext .ts,.js || true
 
   release-frontend:
     needs: [detect, lint]
@@ -62,14 +66,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with: 
+          fetch-depth: 0 
+
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: 'pyschool-frontend/package-lock.json'
-      - run: cd pyschool-frontend && npm ci
-      - run: cd pyschool-frontend && npx semantic-release
+          cache-dependency-path: |
+            pyschool-frontend/package-lock.json
+            pyschool-backend/package-lock.json
+
+      - name: Install frontend deps
+        run: cd pyschool-frontend && npm ci
+
+      - name: Run sematic-release (frontend)
+        run: cd pyschool-frontend && npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
@@ -79,13 +91,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-        with: { fetch-depth: 0 }
+        with: 
+          fetch-depth: 0 
       - uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
-          cache-dependency-path: 'pyschool-backend/package-lock.json'
-      - run: cd pyschool-backend && npm ci
-      - run: cd pyschool-backend && npx semantic-release
+          cache-dependency-path: |
+            pyschool-frontend/package-lock.json
+            pyschool-backend/package-lock.json
+
+      - name: Install backend deps
+        run: cd pyschool-backend && npm ci
+
+      - name: Run semantic-release (backend)
+        run: cd pyschool-backend && npx semantic-release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
